--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-597.4KB/s(Youtube:不良林), server: 185.172.113.106, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-5.71MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-267.4KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-1.19MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.93MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-4.48MB/s(Youtube:不良林), server: 185.160.26.35, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-269.5KB/s(Youtube:不良林), server: 185.172.113.106, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-3.43MB/s(Youtube:不良林), server: sg.guiqing.ml, port: 43956, type: vmess, uuid: 91df6837-896d-45bc-ec6f-0fe4b792b369, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.85MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.59MB/s(Youtube:不良林), server: 185.160.26.35, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇸🇬 新加坡-3.81MB/s(Youtube:不良林), server: bai-piao-wang-zhe12.98848.xyz, port: 36736, type: vmess, uuid: 50a9c98e-8c48-4680-feff-a7ea34705ae9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ytryr6, ws-headers: {Host: bai-piao-wang-zhe12.98848.xyz}}
   - {name: 🇺🇸 美国-5.86MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
   - {name: 🇻🇳 越南-9.63MB/s(Youtube:不良林), server: 103.166.140.106, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.166.140.106}}
   - {name: 🇻🇳 越南-2.19MB/s(Youtube:不良林), server: 103.151.238.40, port: 80, type: vmess, uuid: e982184f-c6e0-4ba4-91cc-71eb6c702588, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /nkpvpn.site, ws-headers: {Host: 103.151.238.40}}
-  - {name: 未知国家-5.22MB/s(Youtube:不良林), server: 103.184.97.4, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.184.97.4}}
+  - {name: 未知国家-683.7KB/s(Youtube:不良林), server: 103.184.97.4, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.184.97.4}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-597.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-267.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-269.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.86MB/s(Youtube:不良林)
       - 🇻🇳 越南-9.63MB/s(Youtube:不良林)
       - 🇻🇳 越南-2.19MB/s(Youtube:不良林)
-      - 未知国家-5.22MB/s(Youtube:不良林)
+      - 未知国家-683.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-597.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-267.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-269.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.86MB/s(Youtube:不良林)
       - 🇻🇳 越南-9.63MB/s(Youtube:不良林)
       - 🇻🇳 越南-2.19MB/s(Youtube:不良林)
-      - 未知国家-5.22MB/s(Youtube:不良林)
+      - 未知国家-683.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-597.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-267.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-269.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.86MB/s(Youtube:不良林)
       - 🇻🇳 越南-9.63MB/s(Youtube:不良林)
       - 🇻🇳 越南-2.19MB/s(Youtube:不良林)
-      - 未知国家-5.22MB/s(Youtube:不良林)
+      - 未知国家-683.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-597.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-267.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-269.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.86MB/s(Youtube:不良林)
       - 🇻🇳 越南-9.63MB/s(Youtube:不良林)
       - 🇻🇳 越南-2.19MB/s(Youtube:不良林)
-      - 未知国家-5.22MB/s(Youtube:不良林)
+      - 未知国家-683.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-597.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-267.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-269.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.86MB/s(Youtube:不良林)
       - 🇻🇳 越南-9.63MB/s(Youtube:不良林)
       - 🇻🇳 越南-2.19MB/s(Youtube:不良林)
-      - 未知国家-5.22MB/s(Youtube:不良林)
+      - 未知国家-683.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-597.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-267.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-269.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.86MB/s(Youtube:不良林)
       - 🇻🇳 越南-9.63MB/s(Youtube:不良林)
       - 🇻🇳 越南-2.19MB/s(Youtube:不良林)
-      - 未知国家-5.22MB/s(Youtube:不良林)
+      - 未知国家-683.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-597.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-267.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-269.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.86MB/s(Youtube:不良林)
       - 🇻🇳 越南-9.63MB/s(Youtube:不良林)
       - 🇻🇳 越南-2.19MB/s(Youtube:不良林)
-      - 未知国家-5.22MB/s(Youtube:不良林)
+      - 未知国家-683.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
