--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-5.50MB/s(Youtube:不良林), server: jp2.autlinzh.xyz, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp2.autlinzh.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.74MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.14MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.85MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1014.1KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-418.9KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20713, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-486.5KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇦 加拿大-1.12MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 (已存活1天)加拿大-2.12MB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-3.86MB/s(Youtube:不良林), server: 103.5.54.177, port: 54723, type: vmess, uuid: 1031729b-4fd5-495c-f21f-94c94ffd3afc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 103.5.54.177}}
   - {name: 🇺🇸 美国-3.43MB/s(Youtube:不良林), server: sg.guiqing.ml, port: 43956, type: vmess, uuid: 91df6837-896d-45bc-ec6f-0fe4b792b369, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-3.66MB/s(Youtube:不良林), server: bai-piao-wang-zhe12.98848.xyz, port: 36736, type: vmess, uuid: 50a9c98e-8c48-4680-feff-a7ea34705ae9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ytryr6, ws-headers: {Host: bai-piao-wang-zhe12.98848.xyz}}
-  - {name: 🇺🇸 美国-5.86MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
-  - {name: 🇻🇳 越南-9.63MB/s(Youtube:不良林), server: 103.166.140.106, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.166.140.106}}
+  - {name: 🇺🇸 美国-6.00MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
   - {name: 未知国家-683.7KB/s(Youtube:不良林), server: 103.184.97.4, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.184.97.4}}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-5.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1014.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-418.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-486.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.86MB/s(Youtube:不良林)
-      - 🇻🇳 越南-9.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.00MB/s(Youtube:不良林)
       - 未知国家-683.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-5.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1014.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-418.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-486.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.86MB/s(Youtube:不良林)
-      - 🇻🇳 越南-9.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.00MB/s(Youtube:不良林)
       - 未知国家-683.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-5.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1014.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-418.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-486.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.86MB/s(Youtube:不良林)
-      - 🇻🇳 越南-9.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.00MB/s(Youtube:不良林)
       - 未知国家-683.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-5.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1014.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-418.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-486.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.86MB/s(Youtube:不良林)
-      - 🇻🇳 越南-9.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.00MB/s(Youtube:不良林)
       - 未知国家-683.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-5.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1014.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-418.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-486.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.86MB/s(Youtube:不良林)
-      - 🇻🇳 越南-9.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.00MB/s(Youtube:不良林)
       - 未知国家-683.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-5.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1014.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-418.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-486.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.86MB/s(Youtube:不良林)
-      - 🇻🇳 越南-9.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.00MB/s(Youtube:不良林)
       - 未知国家-683.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-5.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1014.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-418.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-486.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.86MB/s(Youtube:不良林)
-      - 🇻🇳 越南-9.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.00MB/s(Youtube:不良林)
       - 未知国家-683.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
