--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-2.71MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-445.0KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-453.1KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-4.95MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-186.0KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇯🇵 日本-240.1KB/s(Youtube:不良林), server: 185.172.113.101, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-543.7KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇯🇵 日本-242.0KB/s(Youtube:不良林), server: 185.172.113.102, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-249.2KB/s(Youtube:不良林), server: 185.172.113.106, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-4.60MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-306.2KB/s(Youtube:不良林), server: 45.144.176.135, port: 3003, type: ss, cipher: aes-256-cfb, password: werty33588761qwfdees}
   - {name: 🇺🇸 美国-3.86MB/s(Youtube:不良林), server: 103.5.54.177, port: 54723, type: vmess, uuid: 1031729b-4fd5-495c-f21f-94c94ffd3afc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 103.5.54.177}}
   - {name: 🇺🇸 美国-3.43MB/s(Youtube:不良林), server: sg.guiqing.ml, port: 43956, type: vmess, uuid: 91df6837-896d-45bc-ec6f-0fe4b792b369, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-445.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-186.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-240.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-242.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-249.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-306.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-445.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-186.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-240.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-242.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-249.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-306.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-445.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-186.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-240.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-242.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-249.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-306.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-445.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-186.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-240.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-242.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-249.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-306.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-445.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-186.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-240.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-242.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-249.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-306.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-445.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-186.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-240.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-242.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-249.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-306.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-445.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-186.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-240.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-242.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-249.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-306.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
