--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-240.1KB/s(Youtube:不良林), server: 185.172.113.101, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-543.7KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇯🇵 日本-242.0KB/s(Youtube:不良林), server: 185.172.113.102, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-249.2KB/s(Youtube:不良林), server: 185.172.113.106, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-4.60MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-418.9KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇦 加拿大-1.89MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.45MB/s(Youtube:不良林), server: 185.160.26.35, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-445.0KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇦 加拿大-2.71MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇮🇳 印度-258.7KB/s(Youtube:不良林), server: in-01.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: in-01.licom.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-358.8KB/s(Youtube:不良林), server: 45.144.176.135, port: 3002, type: ss, cipher: aes-256-cfb, password: 36rtuhZfAeUh78Sa}
   - {name: 🇷🇺 俄罗斯联邦-306.2KB/s(Youtube:不良林), server: 45.144.176.135, port: 3003, type: ss, cipher: aes-256-cfb, password: werty33588761qwfdees}
-  - {name: 🇺🇸 美国-3.86MB/s(Youtube:不良林), server: 103.5.54.177, port: 54723, type: vmess, uuid: 1031729b-4fd5-495c-f21f-94c94ffd3afc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 103.5.54.177}}
   - {name: 🇺🇸 美国-3.43MB/s(Youtube:不良林), server: sg.guiqing.ml, port: 43956, type: vmess, uuid: 91df6837-896d-45bc-ec6f-0fe4b792b369, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.66MB/s(Youtube:不良林), server: bai-piao-wang-zhe12.98848.xyz, port: 36736, type: vmess, uuid: 50a9c98e-8c48-4680-feff-a7ea34705ae9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ytryr6, ws-headers: {Host: bai-piao-wang-zhe12.98848.xyz}}
-  - {name: 🇺🇸 美国-6.00MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
+  - {name: 🇸🇬 新加坡-3.37MB/s(Youtube:不良林), server: bai-piao-wang-zhe12.98848.xyz, port: 36736, type: vmess, uuid: 50a9c98e-8c48-4680-feff-a7ea34705ae9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ytryr6, ws-headers: {Host: bai-piao-wang-zhe12.98848.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-240.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-543.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-242.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-249.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-418.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-445.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.71MB/s(Youtube:不良林)
+      - 🇮🇳 印度-258.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-358.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-306.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.37MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-240.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-543.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-242.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-249.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-418.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-445.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.71MB/s(Youtube:不良林)
+      - 🇮🇳 印度-258.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-358.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-306.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.37MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-240.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-543.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-242.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-249.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-418.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-445.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.71MB/s(Youtube:不良林)
+      - 🇮🇳 印度-258.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-358.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-306.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.37MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-240.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-543.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-242.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-249.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-418.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-445.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.71MB/s(Youtube:不良林)
+      - 🇮🇳 印度-258.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-358.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-306.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.37MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-240.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-543.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-242.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-249.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-418.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-445.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.71MB/s(Youtube:不良林)
+      - 🇮🇳 印度-258.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-358.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-306.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.37MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-240.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-543.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-242.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-249.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-418.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-445.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.71MB/s(Youtube:不良林)
+      - 🇮🇳 印度-258.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-358.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-306.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.37MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-240.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-543.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-242.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-249.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-418.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-445.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.71MB/s(Youtube:不良林)
+      - 🇮🇳 印度-258.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-358.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-306.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.37MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
